--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,4 +16,6 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
     - name : test
-      run : pwd
+      run : |
+        pwd
+        ls -lrt
